DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
May-06-2007 patrick     Exposed VRJBasicDelegate so that user-level code can
                        derive from it to customize response to Cocoa events.
                        NEW VERSION: 2.3.6
May-04-2007 patrick     Added lighting code to vrj::GlBasicSimulator so that
                        OSG and OpenSG application objects do not have to
                        include that code themselves just so that the simulator
                        renders nicely.
                        NEW VERSION: 2.3.5
May-01-2007 patrick     Handle vrj::Projection instances (and subclasses
                        thereof) as shared pointers.
                        NEW VERSION: 2.3.4
May-01-2007 patrick     Handle vrj::Viewport instances (and subclasses thereof)
                        as shared pointers.
                        NEW VERSION: 2.3.3
Apr-30-2007 patrick     Handle vrj::User instances as shared pointers.
                        NEW VERSION: 2.3.2
Apr-29-2007 patrick     Renamed the x11_pipes property of the display_system
                        config element to pipes.
                        NEW VERSION: 2.3.1
Apr-26-2007 patrick     Improved OSG scene view lighting for subclasses of
                        vrj::OsgApp. Submitted by Doug McCorkle.
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 2.3.0