@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-11-2007 patrick     Made the data member of vrj::Frustum private and added
+                        vrj::Frustum::getValues() as the accessor for that
+                        data.
+                        NEW VERSION: 2.3.7
 May-06-2007 patrick     Exposed VRJBasicDelegate so that user-level code can
                         derive from it to customize response to Cocoa events.
                         NEW VERSION: 2.3.6
